--- a/app/globals.css
+++ b/app/globals.css
@@ -69,3 +69,16 @@ body {
   margin-bottom: 0.75rem;
   min-width: 100%;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fade-in {
+  animation: fadeIn 1s ease-in-out forwards;
+}
